force-app/main/default/objects/FINS_Staffing__c/FINS_Staffing__c.object-meta.xml
<CustomObject>
    <description>Staffing</description>
    <label>Staffing</label>
    <nameField>
        <label>Staffing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staffings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>