force-app/main/default/objects/FINS_Staffing__c/fields/FINS_Billable_Amount_in_Financials__c.field-meta.xml
<CustomField>
    <fullName>FINS_Billable_Amount_in_Financials__c</fullName>
    <label>Billable Amount in Financials</label>
    <length>18</length>
    <type>Text</type>
</CustomField>