force-app/main/default/objects/FINS_Staffing__c/fields/FINS_Financial_Deal__c.field-meta.xml
<CustomField>
    <fullName>FINS_Financial_Deal__c</fullName>
    <label>Financial Deal</label>
    <referenceTo>FinancialDeal</referenceTo>
    <relationshipLabel>Staffings</relationshipLabel>
    <relationshipName>Staffings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>