force-app/main/default/objects/FINS_Staffing__c/fields/FINS_Forecasted_Effective_Amount__c.field-meta.xml
<CustomField>
    <fullName>FINS_Forecasted_Effective_Amount__c</fullName>
    <label>Forecasted Effective Amount Remaining</label>
    <length>18</length>
    <type>Text</type>
</CustomField>