force-app/main/default/objects/FINS_Staffing__c/fields/FINS_Future_Schedule_Hours_Week_On__c.field-meta.xml
<CustomField>
    <fullName>FINS_Future_Schedule_Hours_Week_On__c</fullName>
    <label>Future Schedule Hours (Week On)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>