force-app/main/default/objects/FINS_Staffing__c/fields/FINS_Future_Scheduled_Value__c.field-meta.xml
<CustomField>
    <fullName>FINS_Future_Scheduled_Value__c</fullName>
    <label>Future Scheduled Value</label>
    <length>18</length>
    <type>Text</type>
</CustomField>