force-app/main/default/objects/FINS_Staffing__c/fields/FINS_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>FINS_Planned_Hours__c</fullName>
    <label>Planned Hours</label>
    <length>18</length>
    <type>Text</type>
</CustomField>