force-app/main/default/objects/FINS_Staffing__c/fields/FINS_Resource_Region__c.field-meta.xml
<CustomField>
    <fullName>FINS_Resource_Region__c</fullName>
    <label>Resource Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>