force-app/main/default/objects/FINS_Staffing__c/fields/FINS_Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>FINS_Scheduled_Hours__c</fullName>
    <label>Scheduled Hours</label>
    <length>18</length>
    <type>Text</type>
</CustomField>