force-app/main/default/objects/FINS_Staffing__c/fields/FINS_Skillset_Required__c.field-meta.xml
<CustomField>
    <fullName>FINS_Skillset_Required__c</fullName>
    <label>Skillsets Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Modeling</fullName>
            </value>
            <value>
                <fullName>Restructuring</fullName>
            </value>
            <value>
                <fullName>Strategic Advisory</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>