force-app/main/default/objects/FINS_Staffing__c/listViews/Staffing_Queue.listView-meta.xml
<ListView>
    <fullName>Staffing_Queue</fullName>
    <columns>NAME</columns>
    <columns>FINS_Financial_Deal__c</columns>
    <columns>FINS_Role__c</columns>
    <columns>FINS_Resource_Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FINS_Actual_Amount_Remaining__c</field>
        <operation>equals</operation>
    </filters>
    <label>Staffing Queue</label>
</ListView>